Cambio de ipnyb que impide commit

--- a/notebooks/simulation_9.ipynb
+++ b/notebooks/simulation_9.ipynb
@@ -1289,85 +1289,57 @@
     "    \n",
     "    def customer_generator(self):\n",
     "        while True:\n",
-    "            # Schedule next arrival first (like in original arrive function)\n",
     "            yield self.env.timeout(self.get_interarrival_time())\n",
     "            \n",
-    "            # Create new customer (equivalent to transfer[1] = sim_time in original)\n",
     "            arrival_time = self.env.now\n",
     "            self.num_arrivals += 1\n",
     "            customer_id = self.num_arrivals\n",
-    "            \n",
-    "            # Process customer through the system\n",
     "            self.env.process(self.customer_flow(customer_id, arrival_time))\n",
     "    \n",
     "    def customer_flow(self, customer_id, arrival_time):\n",
-    "        \"\"\"Handles the complete flow through both queues and servers\"\"\"\n",
-    "        # Level 1 processing (equivalent to original arrive and depart1 logic)\n",
-    "        \n",
-    "        # Record queue1 entry time (transfer[2] in original)\n",
     "        queue1_entry = self.env.now\n",
     "        self.queue1_entry_times[customer_id] = queue1_entry\n",
     "        \n",
-    "        # Request server1 (this handles both queueing and service)\n",
     "        with self.server1.request() as req:\n",
-    "            # This is where the customer would wait in queue1 if servers are busy\n",
     "            yield req\n",
     "            \n",
-    "            # Customer got server1 - record delay\n",
     "            queue1_delay = self.env.now - queue1_entry\n",
     "            self.queue1_delays.append(queue1_delay)\n",
     "            del self.queue1_entry_times[customer_id]\n",
-    "            \n",
-    "            # Process at server1 (equivalent to EVENT_DEPARTURE1)\n",
     "            yield self.env.timeout(self.get_service_time())\n",
     "        \n",
-    "        # Level 2 processing (equivalent to original depart1 and depart2 logic)\n",
-    "        \n",
-    "        # Record queue2 entry time (transfer[4] in original)\n",
     "        queue2_entry = self.env.now\n",
     "        self.queue2_entry_times[customer_id] = queue2_entry\n",
-    "        \n",
-    "        # Request server2\n",
     "        with self.server2.request() as req:\n",
-    "            # Wait in queue2 if servers are busy\n",
     "            yield req\n",
     "            \n",
-    "            # Customer got server2 - record delay\n",
     "            queue2_delay = self.env.now - queue2_entry\n",
     "            self.queue2_delays.append(queue2_delay)\n",
     "            del self.queue2_entry_times[customer_id]\n",
     "            \n",
-    "            # Process at server2 (equivalent to EVENT_DEPARTURE2)\n",
     "            yield self.env.timeout(self.get_service_time())\n",
     "        \n",
-    "        # Customer completed both services\n",
     "        system_time = self.env.now - arrival_time\n",
     "        self.system_times.append(system_time)\n",
     "        self.num_completed += 1\n",
     "    \n",
     "    def monitor_queues(self):\n",
-    "        \"\"\"Tracks queue lengths over time (equivalent to original filest)\"\"\"\n",
     "        while True:\n",
-    "            # Current customers waiting in queue1 (not being served)\n",
     "            q1_len = len(self.server1.queue)\n",
     "            self.queue1_lengths.append(q1_len)\n",
     "            \n",
-    "            # Current customers waiting in queue2 (not being served)\n",
     "            q2_len = len(self.server2.queue)\n",
     "            self.queue2_lengths.append(q2_len)\n",
     "            \n",
-    "            yield self.env.timeout(0.1)  # Sample every 0.1 time units\n",
+    "            yield self.env.timeout(0.1) \n",
     "    \n",
     "    def monitor_servers(self):\n",
-    "        \"\"\"Tracks server utilization over time\"\"\"\n",
     "        while True:\n",
-    "            # Record number of busy servers (equivalent to list_size[LIST_SERVER1])\n",
     "            self.server1_busy.append(len(self.server1.users))\n",
     "            self.server2_busy.append(len(self.server2.users))\n",
-    "            yield self.env.timeout(0.1)  # Sample every 0.1 time units\n",
+    "            yield self.env.timeout(0.1)  \n",
     "    \n",
     "    def generate_report(self):\n",
-    "        \"\"\"Produces output exactly matching the original report format\"\"\"\n",
     "        def safe_mean(data):\n",
     "            return statistics.mean(data) if data else 0.0\n",
     "        \n",
@@ -1383,7 +1355,6 @@
     "        report += f\"Total simulation time{12*' '}{self.env.now:.3f} minutes\\n\\n\"\n",
     "        report += f\"Distribution type: {self.distribution_type}\\n\"\n",
     "        \n",
-    "        # Distribution description matching original\n",
     "        dist_map = {\n",
     "            1: \"Interarrival: Exponential, Service: Exponential\",\n",
     "            2: \"Interarrival: Constant, Service: Exponential\",\n",
@@ -1394,33 +1365,28 @@
     "        report += f\"Number of servers at level 1: {self.server1.capacity}\\n\"\n",
     "        report += f\"Number of servers at level 2: {self.server2.capacity}\\n\\n\"\n",
     "        \n",
-    "        # Queue 1 delays\n",
     "        report += \"\\nDelays in Queue 1, in minutes:\\n\"\n",
     "        report += f\"  Average: {safe_mean(self.queue1_delays):.3f}\\n\"\n",
     "        report += f\"  Maximum: {safe_max(self.queue1_delays):.3f}\\n\"\n",
     "        report += f\"  Minimum: {safe_min(self.queue1_delays):.3f}\\n\"\n",
     "        report += f\"  Number measured: {len(self.queue1_delays)}\\n\"\n",
     "        \n",
-    "        # Queue 2 delays\n",
     "        report += \"\\nDelays in Queue 2, in minutes:\\n\"\n",
     "        report += f\"  Average: {safe_mean(self.queue2_delays):.3f}\\n\"\n",
     "        report += f\"  Maximum: {safe_max(self.queue2_delays):.3f}\\n\"\n",
     "        report += f\"  Minimum: {safe_min(self.queue2_delays):.3f}\\n\"\n",
     "        report += f\"  Number measured: {len(self.queue2_delays)}\\n\"\n",
     "        \n",
-    "        # System times\n",
     "        report += \"\\nTotal System Time (arrival to final departure), in minutes:\\n\"\n",
     "        report += f\"  Average: {safe_mean(self.system_times):.3f}\\n\"\n",
     "        report += f\"  Maximum: {safe_max(self.system_times):.3f}\\n\"\n",
     "        report += f\"  Minimum: {safe_min(self.system_times):.3f}\\n\"\n",
     "        report += f\"  Number measured: {len(self.system_times)}\\n\"\n",
     "        \n",
-    "        # Queue lengths (average)\n",
     "        report += \"\\nQueue lengths:\\n\"\n",
     "        report += f\"  Average queue 1 length: {safe_mean(self.queue1_lengths):.3f}\\n\"\n",
     "        report += f\"  Average queue 2 length: {safe_mean(self.queue2_lengths):.3f}\\n\"\n",
     "        \n",
-    "        # Server utilization (percentage)\n",
     "        server1_util = sum(self.server1_busy) / len(self.server1_busy) / self.server1.capacity * 100\n",
     "        server2_util = sum(self.server2_busy) / len(self.server2_busy) / self.server2.capacity * 100\n",
     "        report += \"\\nServer utilization:\\n\"\n",
@@ -1433,12 +1399,9 @@
     "        return report\n",
     "\n",
     "def read_parameters(filename):\n",
-    "    \"\"\"Reads parameters from file in the same format as the original\"\"\"\n",
     "    with open(filename, 'r') as f:\n",
-    "        # Read all values from the first line\n",
     "        values = list(map(float, f.readline().strip().split()))\n",
     "        \n",
-    "        # Convert to appropriate types\n",
     "        mean_interarrival = values[0]\n",
     "        mean_service = values[1]\n",
     "        total_simulation_time = int(values[2])\n",
@@ -1450,20 +1413,16 @@
     "                distribution_type, servers_level1, servers_level2)\n",
     "\n",
     "def run_simulation(input_file, output_prefix):\n",
-    "    \"\"\"Main function to run the simulation\"\"\"\n",
     "    try:\n",
-    "        # Read parameters from file\n",
     "        params = read_parameters(input_file)\n",
     "        mean_interarrival, mean_service, total_simulation_time, \\\n",
     "        distribution_type, servers_level1, servers_level2 = params\n",
     "        \n",
-    "        # Run simulation\n",
     "        env = simpy.Environment()\n",
     "        system = SimuladorSecuencial(env, mean_interarrival, mean_service,\n",
     "                                   servers_level1, servers_level2, distribution_type)\n",
     "        env.run(until=total_simulation_time)\n",
     "        \n",
-    "        # Generate and save report\n",
     "        report = system.generate_report()\n",
     "        output_filename = f\"{output_prefix}_{distribution_type}.txt\"\n",
     "        \n",
@@ -1481,15 +1440,13 @@
     "        return False\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    # Run with the same file names as original\n",
     "    input_file = \"parameters_9.txt\"\n",
     "    output_prefix = \"report_9\"\n",
     "    \n",
     "    if not run_simulation(input_file, output_prefix):\n",
-    "        # If parameters_9.txt not found, create a sample one and try again\n",
     "        print(\"Creating sample parameters file and running simulation...\")\n",
     "        with open(input_file, 'w') as f:\n",
-    "            f.write(\"5.0 4.0 1000 1 2 3\\n\")  # Default parameters\n",
+    "            f.write(\"5.0 4.0 1000 1 2 3\\n\")\n",
     "        \n",
     "        run_simulation(input_file, output_prefix)"
    ]
