--- a/notebooks/simulation_9.ipynb
+++ b/notebooks/simulation_9.ipynb
@@ -1212,17 +1212,64 @@
     "id": "yX7Xf2Gf9WbC"
    },
    "source": [
-    "### 2. Elaborar el diagrama de flujo del programa principal y de cada subprograma que conforma el modelo\n",
-    "\n",
-    "**a. Simlib**"
+    "### 2. Elaborar el diagrama de flujo del programa principal y de cada subprograma que conforma el modelo"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![Image Description](images_9/arrive2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para la función arrive, tenemos el presente diagrama de flujo. Para este evento, realizamos el mismo proceso de control de flujo, que en el ejemplo correspondiente del ejemplo del Capítulo 1 del libro de Averill y Law, que es, consultar si hay servidores disponibles. No obstante, los pasos que se realizan durante el proceso son diferentes. La principal diferencia es el manejo en el caso de que el servidor esté ocupado. En el flujo original, se especifican todos los pasos de añadir el cliente a la fila. Pero en este caso, sólo es necesario añadir el cliente a la fila, ya que la librería Simlib se encarga del manejo de la fila. Los pasos en el caso de que el servidor esté disponible son los mismos del evento original."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Image Description](images_9/depart1_2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para la función depart_1, toca mezclar la lógica de la llegada con la lógica de salida convencional. Esto es porque el evento de salida del servicio 1, requiere manejar también la llegada al servicio 2. Los clientes que hayan terminado el servicio 1, intentarán obtener el servicio 2 de manera inmediata. Si los servidores están ocupados, tendrán que ir a la fila, siguiendo la misma lógica del evento arrive. Para la lógica de salida, hace la misma pregunta que el ejemplo original, si hay clientes esperando en la fila 1. Si hay clientes esperando después de la salida del cliente anterior, se siguen los mismos pasos de manejo de la fila y ejecución del servicio. Si no hay clientes, no es necesario cambiar manualmente la disponibilidad del servidor, porque Simib actualiza el contenido de las listas en cada evento."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Image Description](images_9/depart2_2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para la función depart_2, se sigue la misma lógica de salida de un cliente, que se mostró en depart1, sin programar la entrada del cliente saliente a un nuevo servicio, porque una vez terminado el servicio 2, el cliente sale del sistema. La única diferencia es que actualiza el contador num_completed_customers, una vez salen los clientes del sistema. Esto será necesario para las métricas de desempeño."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Image Description](images_9/main2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No realizamos diagramas de flujo de init_simlib o report, porque son eventos muy secuenciales, y no aportan al entendimiento del modelo de simulación. Para la función main, definimos la entrada de los parámetros, e inicializamos el modelo. La inicializacion es notoriamente más sencilla, porque muchas de las variables y listas que creamos manualmente en el taller 1, son manejadas por la librería Simlib. Para la ejecución de la simulación, sólo debe consultar una variable de detención, en este caso, el tiempo máximo de simulación. En cada ciclo de la simulación, identifica el siguiente evento, el cual es insertando en la lista de eventos por Simlib, sin tener que ser especificada por el programador. Dependiendo del próximo evento, se ejecuta el método correspondiente, y se programa el siguiente evento mientras no se haya cumplido el tiempo máximo. Una vez se termina la simulación, se escribe el reporte con las métricas de desempeño."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2219,6 +2266,48 @@
    },
    "source": [
     "### 2. Elaborar el diagrama de flujo del programa principal y de cada subprograma que conforma el modelo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Image Description](images_9/customer_flow.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para el proceso customer_flow, se modela la secuencia estándar de servicio del cliente a lo largo de nuestra simulación. A diferencia de los eventos, estos procesos no se concentran en las bifurcaciones de flujo, sino en identificar los caminos posibles que puede seguir un cliente en nuestro sistema. Por ejemplo, se puede ver que en este proceso, se condensa el equivalente de arrive, depart1, y depart2 del programa en Simlib. Pero, aunque el diagrama de flujo muestre el bucle en el caso de que algún servidor no esté disponible, realmente no cambia el comportamiento. Esto es porque SimPy usa with y yield. Estas son estructuras de Python que manejan el flujo de los agentes (clientes) en la simulación. La estructura with, permite crear una solicitud, que va a ser enviada a la cola del recurso (server1 y server2 en nuestro ejemplo). La estructura yield, detiene la ejecución del proceso hasta que se apruebe la solicitud creada con with. Entonces, si bien el flujo es distinto si el servidor está disponible u ocupado, en realidad siempre hace lo mismo. La diferencia es el tiempo que le toma al proceso, ejecutar el inicio del servicio de un cliente. Esta demora es registrada por el modelo para el reporte de métricas de desempeño."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Image Description](images_9/customer_generator.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El proceso customer_generator, es en esencia, un contenedor del proceso customer_flow. Si bien customer_flow dicta el flujo del cliente en el sistema, de inicio a fin, customer_generator permite asignarle un flujo a cada cliente. Es necesario separar esto, porque permite asociar todas las marcas de tiempo, e intervalos de demora y servicio a cada cliente en específico, lo que permite un manejo más fidedigno del flujo de cada cliente. Esto es particularmente útil en modelos que incluyen múltiples servicios o servidores de forma paralela, o modelos en los que el camino de un cliente pueda diferir en su orden o longitud. Por tanto, este proceso crea un cliente al momento de agendar la llegada de un nuevo cliente, anota un identificador de cliente, su tiempo de llegada, y crea un proceso customer_flow para ese cliente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Image Description](images_9/run_simulation.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El proceso run_simulation es el equivalente al programa main del modelo construido con Simlib. Este proceso recibe los parámetros, crea el entorno de simulación, y ejecuta los procesos del modelo hasta que se acabe el tiempo de simulación. Además de customer_generator, hay dos procesos concurrentes, llamados monitor_queues y monitor_servers. No obstante, estos son específicos para el reporte de métricas de desempeño, y no alteran el comportamiento de la simulación. Una vez se acaba la simulación, el proceso se encarga de escribir el reporte, y da por finalizada la ejecución del programa."
    ]
   },
   {
