--- a/notebooks/simulation_9.ipynb
+++ b/notebooks/simulation_9.ipynb
@@ -2728,7 +2728,9 @@
     "| Uso servidor 2     | 88.6811%                | 87.8167%              | 83.8064% | 81.4456% |\n",
     "| Clientes atendidos | 1013                    | 1014                   | 1014 | 1014 |\n",
     "\n",
-    "En este caso, podemos ver que sólo disminuir el tiempo de servicio por un minuto, ya se"
+    "En este caso, podemos ver que sólo disminuir el tiempo de servicio por un minuto, ya se consigue un mejor rendimiento del sistema (aunque todavía insuficiente), que comprando una nueva máquina de la misma eficiencia. La mejora de eficiencia en los dos servicios permite que ambas filas tengan un tiempo de espera menor, en vez de atascar todo el modelo en la fila 1. Ambas filas son más manejables que la fila 1 del modelo con dos máquinas. No obstante, mejorar la eficiencia de los servicios por sólo medio minuto no alcanza a superar el rendimiento del modelo con dos servidores.\n",
+    "\n",
+    "Para tomar esta decisión, es necesario evaluar cuánto se puede mejorar la eficiencia de las máquinas existentes, y de esta manera, realizar la comparación con los indicadores vistos al comprar una segunda máquina para el servicio 2."
    ]
   },
   {
@@ -3882,7 +3884,232 @@
     "| Uso servidor 2     | 88.8%                | 89.6%              | 45.4% |\n",
     "| Clientes atendidos | 988                    | 949                   | 1003 |\n",
     "\n",
-    "En el caso de SimPy, también parece favorecer la compra de una máquina de tipo 2, sobre una máquina de tipo 1. No obstante, la diferencia no es tan marcada como en las corridas realizadas con SimPy. Valga aclarar que la manera de obtener simulaciones en ambas librerías es radicalmente distinta, particularmente con el manejo de números aleatorios. Simlib utiliza un sistema de semillas, que permite obtener valores que simulan los números aleatorios, de manera repetible, al utilizar una semilla en particular. SimPy, en cambio, hace cálculos de números aleatorios para cada uno de los procesos que maneja variables aleatorias, y no son replicables entre observaciones. Por tanto, mientras que una simulación de Simlib siempre dará el mismo resultado, mientras no se cambie de semilla, no se puede replicar una simulación en SimPy. Esta variabilidad entre observaciones puede explicar algunas de las diferencias y discrepancias observadas en los dos modelos. A diferencia de Simlib, en SimPy valdría más la pena realizar múltiples observaciones de las simulaciones, para obtener muestras poblacionales, y tomar conclusiones de dichas muestras poblacionales:"
+    "En el caso de SimPy, también parece favorecer la compra de una máquina de tipo 2, sobre una máquina de tipo 1. No obstante, la diferencia no es tan marcada como en las corridas realizadas con SimPy. Valga aclarar que la manera de obtener simulaciones en ambas librerías es radicalmente distinta, particularmente con el manejo de números aleatorios. Simlib utiliza un sistema de semillas, que permite obtener valores que simulan los números aleatorios, de manera repetible, al utilizar una semilla en particular. SimPy, en cambio, hace cálculos de números aleatorios para cada uno de los procesos que maneja variables aleatorias, y no son replicables entre observaciones. Por tanto, mientras que una simulación de Simlib siempre dará el mismo resultado, mientras no se cambie de semilla, no se puede replicar una simulación en SimPy. Esta variabilidad entre observaciones puede explicar algunas de las diferencias y discrepancias observadas en los dos modelos. A diferencia de Simlib, en SimPy valdría más la pena realizar múltiples observaciones de las simulaciones, para obtener muestras poblacionales, y tomar conclusiones de dichas muestras poblacionales.\n",
+    "\n",
+    "A continuación, realizamos la comparación respectiva, con simulaciones con tiempos menores de servicio:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "2_XCHLu09-pN",
+    "outputId": "1b6a1238-bc99-49a2-9588-f1ee6584b654"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting parameters_9.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile parameters_9.txt\n",
+    "10 8.5 10000 1 1 1\n",
+    "service_8_5.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "id": "ImJU1lIaBxRw"
+   },
+   "outputs": [],
+   "source": [
+    "!python3 simulation_9.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "sC46dbTnCtxE",
+    "outputId": "28d9da1e-724b-4378-dc02-ddb8a9fe032c"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multi-server queueing system using SimPy\n",
+      "\n",
+      "Mean interarrival time           10.000 minutes\n",
+      "\n",
+      "Mean service time                8.500 minutes\n",
+      "\n",
+      "Total simulation time            10000.000 minutes\n",
+      "\n",
+      "Distribution type: 1\n",
+      "Interarrival: Exponential, Service: Exponential\n",
+      "Number of servers at level 1: 1\n",
+      "Number of servers at level 2: 1\n",
+      "\n",
+      "\n",
+      "Delays in Queue 1, in minutes:\n",
+      "  Average: 45.895\n",
+      "  Maximum: 212.819\n",
+      "  Minimum: 0.000\n",
+      "  Number measured: 967\n",
+      "\n",
+      "Delays in Queue 2, in minutes:\n",
+      "  Average: 33.498\n",
+      "  Maximum: 233.716\n",
+      "  Minimum: 0.000\n",
+      "  Number measured: 959\n",
+      "\n",
+      "Total System Time (arrival to final departure), in minutes:\n",
+      "  Average: 95.410\n",
+      "  Maximum: 306.899\n",
+      "  Minimum: 2.611\n",
+      "  Number measured: 958\n",
+      "\n",
+      "Queue lengths:\n",
+      "  Average queue 1 length: 4.491\n",
+      "  Average queue 2 length: 3.224\n",
+      "\n",
+      "Server utilization:\n",
+      "  Server 1 utilization: 81.8%\n",
+      "  Server 2 utilization: 79.4%\n",
+      "\n",
+      "Time simulation ended:            10000.000 minutes\n",
+      "Number of customers completed both services:        958\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"service_8_5.txt\", \"r\") as file:\n",
+    "    print(file.read())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "2_XCHLu09-pN",
+    "outputId": "1b6a1238-bc99-49a2-9588-f1ee6584b654"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting parameters_9.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile parameters_9.txt\n",
+    "10 8 10000 1 1 1\n",
+    "service_8.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "id": "ImJU1lIaBxRw"
+   },
+   "outputs": [],
+   "source": [
+    "!python3 simulation_9.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "sC46dbTnCtxE",
+    "outputId": "28d9da1e-724b-4378-dc02-ddb8a9fe032c"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multi-server queueing system using SimPy\n",
+      "\n",
+      "Mean interarrival time           10.000 minutes\n",
+      "\n",
+      "Mean service time                8.000 minutes\n",
+      "\n",
+      "Total simulation time            10000.000 minutes\n",
+      "\n",
+      "Distribution type: 1\n",
+      "Interarrival: Exponential, Service: Exponential\n",
+      "Number of servers at level 1: 1\n",
+      "Number of servers at level 2: 1\n",
+      "\n",
+      "\n",
+      "Delays in Queue 1, in minutes:\n",
+      "  Average: 28.863\n",
+      "  Maximum: 141.810\n",
+      "  Minimum: 0.000\n",
+      "  Number measured: 982\n",
+      "\n",
+      "Delays in Queue 2, in minutes:\n",
+      "  Average: 40.735\n",
+      "  Maximum: 185.708\n",
+      "  Minimum: 0.000\n",
+      "  Number measured: 967\n",
+      "\n",
+      "Total System Time (arrival to final departure), in minutes:\n",
+      "  Average: 85.389\n",
+      "  Maximum: 231.889\n",
+      "  Minimum: 0.941\n",
+      "  Number measured: 966\n",
+      "\n",
+      "Queue lengths:\n",
+      "  Average queue 1 length: 2.834\n",
+      "  Average queue 2 length: 4.008\n",
+      "\n",
+      "Server utilization:\n",
+      "  Server 1 utilization: 78.9%\n",
+      "  Server 2 utilization: 78.7%\n",
+      "\n",
+      "Time simulation ended:            10000.000 minutes\n",
+      "Number of customers completed both services:        966\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"service_8.txt\", \"r\") as file:\n",
+    "    print(file.read())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En la siguiente tabla, comparamos las medidas de desempeño, al comprar una nueva máquina para el servicio 1, comparada con una nueva máquina para el servicio 2:\n",
+    "| Métrica            | Original | Dos servidores 2| Servicio 8.5 minutos | Servicio 8 minutos \n",
+    "|--------------------|-------------------------|-----------------------| -----|----|\n",
+    "| Demora total       | 145.865 (4.5-341.9)     | 114.7 (1.3-311.1)   | 95.41 (2.6-306.9) | 85.389 (0.9-231.9) |\n",
+    "| Demora cola 1      | 75.27 (0-306.2)       | 94.274 (0-293.2)       | 45.895 (0-212.8) | 28.863 (0-141.8) |\n",
+    "| Demora cola 2      | 51.864 (0-256)       | 2.002 (0-31.3)      | 33.498 (0-233.7) | 40.735 (0-185.7) |\n",
+    "| Longitud fila 1    | 7.551          | 9.485        | 4.491 | 2.834 |\n",
+    "| Longitud fila 2    | 5.203          | 0.201        | 3.224 | 4.008 |\n",
+    "| Uso servidor 1     | 88.4%                | 93.2%             | 81.8% | 78.9% |\n",
+    "| Uso servidor 2     | 88.8%                | 45.4%              | 79.4% | 78.7% |\n",
+    "| Clientes atendidos | 988                    | 1003                   | 958 | 966|\n",
+    "\n",
+    "Realizamos las mismas comparaciones que hicimos para el modelo construido en Simlib. Para este ejemplo, observamos que en efecto, la mejora en la eficiencia de las máquinas puede generar mejores resultados que la compra de una nueva máquina para el servicio 2. Para esta simulación, la mejora de medio minuto fue suficiente para mejorar las métricas del modelo con dos máquinas. Como se comentó en el caso pasado, estas diferencias pueden ser atribuidas a la variación por la"
    ]
   },
   {
