Punto 5 finalizado con tracking correcto

--- a/notebooks/simulation_9.ipynb
+++ b/notebooks/simulation_9.ipynb
@@ -4109,7 +4109,7 @@
     "| Uso servidor 2     | 88.8%                | 45.4%              | 79.4% | 78.7% |\n",
     "| Clientes atendidos | 988                    | 1003                   | 958 | 966|\n",
     "\n",
-    "Realizamos las mismas comparaciones que hicimos para el modelo construido en Simlib. Para este ejemplo, observamos que en efecto, la mejora en la eficiencia de las máquinas puede generar mejores resultados que la compra de una nueva máquina para el servicio 2. Para esta simulación, la mejora de medio minuto fue suficiente para mejorar las métricas del modelo con dos máquinas. Como se comentó en el caso pasado, estas diferencias pueden ser atribuidas a la variación por la"
+    "Realizamos las mismas comparaciones que hicimos para el modelo construido en Simlib. Para este ejemplo, observamos que en efecto, la mejora en la eficiencia de las máquinas puede generar mejores resultados que la compra de una nueva máquina para el servicio 2. Para esta simulación, la mejora de medio minuto fue suficiente para mejorar las métricas del modelo con dos máquinas. Como se comentó en el caso pasado, estas diferencias pueden ser atribuidas a la variación por las mediciones individuales realizadas en este ejercicio."
    ]
   },
   {
